<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    tools:context="com.example.ed.valiutoskonvertavimaspaysera_edvinaspeciauskas.ConversionActivity">

    <TextView
        android:id="@+id/textViewParduodamaSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/converting_from_text" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewParduodamaSuma"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/editTextFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_from"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/currenciesSpinner1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewGaunamaSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:text="@string/converting_to_text" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGaunamaSuma"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/editTextTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/hint_to"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/currenciesSpinner2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:text="@string/button_convert" />

</RelativeLayout>
