<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ed.valiutoskonvertavimaspaysera_edvinaspeciauskas.MainActivity">

    <LinearLayout
        android:id="@+id/currenciesLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:lineSpacingExtra="-10sp"
                android:text="@string/val_eur"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberViewEur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:lineSpacingExtra="-10sp"
                android:text="@string/val_usd"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberViewUsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewJpy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:lineSpacingExtra="-10sp"
                android:text="@string/val_jpy"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberViewJpy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currenciesLayout">

        <Button
            android:id="@+id/buttonConvert"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:onClick="callConversionActivity"
            android:text="@string/button_conversion"
            android:textSize="19sp" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/buttonHistory"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="callHistoryActivity"
            android:text="@string/button_history"
            android:textSize="19sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
